Fix social buttons overlap

--- a/app/main.css
+++ b/app/main.css
@@ -61,13 +61,14 @@ span {
 }
 
 .social-buttons > iframe {
-  width: 85px;
+  width: 95px;
   height: 20px;
   border: 0;
 }
 
 .fb-share-button {
   display: inline !important;
+  margin-left: -10px;
 }
 
 .fb-share-button > span {
